# serverless-observability

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  notify-perf-test.yml  package-lock.json  package.json  pyproject.toml  samconfig.toml  template.yaml
services/delivery/: app.py
services/notification/: app.py
services/slow_api/: app.py
tests/unit/: test_handler.py
