[tool.poetry]
name = "serverless-observability"
version = "0.1.0"
description = "Serverless Observability Example"
authors = ["walmsles <2704782+walmsles@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "services"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
boto3 = "^1.25.4"
isort = "^5.10.1"
black = "^22.10.0"
flake8 = "^5.0.4"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mypy = "^0.982"
mypy-boto3-s3 = "^1.26.0.post1"
mypy-boto3 = "^1.26.0.post1"
boto3-stubs = "^1.26.0.post1"
pylint = "^2.15.5"
mypy-boto3-cloudformation = "^1.26.0.post1"
mypy-boto3-lambda = "^1.26.0.post1"
requests = "^2.31.0"
retry = "^0.9.2"

[tool.poetry.group.notification.dependencies]
aws-lambda-powertools = "^2.11.0"


[tool.poetry.group.delivery.dependencies]
aws-lambda-powertools = "^2.11.0"
requests = "^2.28.2"
tenacity = "^8.2.2"


[tool.poetry.group.slow_api.dependencies]
aws-lambda-powertools = "^2.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
